updated formatting and fixed element alignment

--- a/home_theme.css
+++ b/home_theme.css
@@ -6,6 +6,12 @@
     padding-left:10px;
     padding-right:10px;
 }
+.buttonDiv {
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    max-width:75%;
+    margin-right: auto;
+}
 .navPanel {
     padding-left:2px;
     padding-right:2px;
@@ -73,12 +79,14 @@
     padding-bottom:10px;
     padding-left:10px;
     padding-right:10px;
-    margin-top:90%;
+    margin-top:1%;
 }
 .bodyPanel {
-    background-color:white;
+    background-color:rgba(255, 255, 255, 0.7);
+    
     border:5px inset brown;
     margin-top:1%;
+    padding-bottom:100%;
 }
 .container {
     margin-top:10px;
@@ -89,13 +97,17 @@
 .navLink {
     color:blanchedalmond;
     background-color:brown;
-    /*border:2px inset black;*/
+    border:2px outset burlywood;
     padding-top:5px;
     padding-bottom:5px;
     padding-left:15px;
     padding-right:15px;
+    margin:2px;
     text-decoration:none;
     text-align:center;
+}
+.navLink:hover {
+    text-decoration:underline;
 }
 h1 {
     text-align:center;
@@ -110,6 +122,10 @@ h2 {
 }
 body {
     background-color:blanchedalmond;
+    background-image:url("images/parchment.jpg");
+    max-width:1100px;
+    margin-left:auto;
+    margin-right:auto;
 }
 p {
     text-align:left;
