--- a/pages/page_theme.css
+++ b/pages/page_theme.css
@@ -17,14 +17,16 @@ h6 {
     margin-top:15px;
 }
 p {
-    font-size:14px;
+    font-size:16px;
     color:black;
     text-align:justify;
 }
 body {
-    background-color:antiquewhite;
-    margin-left:30px;
-    margin-right:30px;
+    background-color:blanchedalmond;
+    background-image:url("../images/parchment.jpg");
+    max-width:1100px;
+    margin-left:auto;
+    margin-right:auto;
 }
 img {
     display:block;
@@ -97,6 +99,9 @@ img {
     padding-right:15px;
     text-decoration:none;
     text-align:center;
+}
+.navLink:hover {
+    text-decoration:underline;
 }
 .siteVer {
     color:antiquewhite;
